Fix bug with index_dev.php

--- a/nginx/conf.d.oro/oro.conf
+++ b/nginx/conf.d.oro/oro.conf
@@ -68,6 +68,7 @@ server {
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         fastcgi_param  PATH_INFO        $fastcgi_path_info;
         fastcgi_param  HTTPS            on;
+        fastcgi_param REMOTE_ADDR 127.0.0.1;
     }
 
     # Websockets connection path (configured in .env-app.local)
